--- a/source/uwp/Renderer/XamlCardRenderer.vcxproj.filters
+++ b/source/uwp/Renderer/XamlCardRenderer.vcxproj.filters
@@ -51,6 +51,25 @@
     <ClCompile Include="lib\AdaptiveSeparatorConfig.cpp" />
     <ClCompile Include="lib\AdaptiveActionParserRegistration.cpp" />
     <ClCompile Include="lib\AdaptiveElementParserRegistration.cpp" />
+    <ClCompile Include="lib\AdaptiveActionRendererRegistration.cpp" />
+    <ClCompile Include="lib\AdaptiveChoiceSetInputRenderer.cpp" />
+    <ClCompile Include="lib\AdaptiveColumnRenderer.cpp" />
+    <ClCompile Include="lib\AdaptiveColumnSetRenderer.cpp" />
+    <ClCompile Include="lib\AdaptiveContainerRenderer.cpp" />
+    <ClCompile Include="lib\AdaptiveDateInputRenderer.cpp" />
+    <ClCompile Include="lib\AdaptiveElementRendererRegistration.cpp" />
+    <ClCompile Include="lib\AdaptiveFactSetRenderer.cpp" />
+    <ClCompile Include="lib\AdaptiveImageRenderer.cpp" />
+    <ClCompile Include="lib\AdaptiveImageSetRenderer.cpp" />
+    <ClCompile Include="lib\AdaptiveNumberInputRenderer.cpp" />
+    <ClCompile Include="lib\AdaptiveRenderContext.cpp" />
+    <ClCompile Include="lib\AdaptiveTextBlockRenderer.cpp" />
+    <ClCompile Include="lib\AdaptiveTextInputRenderer.cpp" />
+    <ClCompile Include="lib\AdaptiveTimeInputRenderer.cpp" />
+    <ClCompile Include="lib\AdaptiveToggleInputRenderer.cpp" />
+    <ClCompile Include="lib\AdaptiveOpenUrlActionRenderer.cpp" />
+    <ClCompile Include="lib\AdaptiveShowCardActionRenderer.cpp" />
+    <ClCompile Include="lib\AdaptiveSubmitActionRenderer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="lib\AdaptiveCard.h" />
@@ -111,6 +130,25 @@
     <ClInclude Include="lib\AdaptiveSeparatorConfig.h" />
     <ClInclude Include="lib\AdaptiveActionParserRegistration.h" />
     <ClInclude Include="lib\AdaptiveElementParserRegistration.h" />
+    <ClInclude Include="lib\AdaptiveActionRendererRegistration.h" />
+    <ClInclude Include="lib\AdaptiveChoiceSetInputRenderer.h" />
+    <ClInclude Include="lib\AdaptiveColumnRenderer.h" />
+    <ClInclude Include="lib\AdaptiveColumnSetRenderer.h" />
+    <ClInclude Include="lib\AdaptiveContainerRenderer.h" />
+    <ClInclude Include="lib\AdaptiveDateInputRenderer.h" />
+    <ClInclude Include="lib\AdaptiveElementRendererRegistration.h" />
+    <ClInclude Include="lib\AdaptiveFactSetRenderer.h" />
+    <ClInclude Include="lib\AdaptiveImageRenderer.h" />
+    <ClInclude Include="lib\AdaptiveImageSetRenderer.h" />
+    <ClInclude Include="lib\AdaptiveNumberInputRenderer.h" />
+    <ClInclude Include="lib\AdaptiveRenderContext.h" />
+    <ClInclude Include="lib\AdaptiveTextBlockRenderer.h" />
+    <ClInclude Include="lib\AdaptiveTextInputRenderer.h" />
+    <ClInclude Include="lib\AdaptiveTimeInputRenderer.h" />
+    <ClInclude Include="lib\AdaptiveToggleInputRenderer.h" />
+    <ClInclude Include="lib\AdaptiveOpenUrlActionRenderer.h" />
+    <ClInclude Include="lib\AdaptiveShowCardActionRenderer.h" />
+    <ClInclude Include="lib\AdaptiveSubmitActionRenderer.h" />
   </ItemGroup>
   <ItemGroup>
     <Midl Include="idl\AdaptiveCards.XamlCardRenderer.idl" />
