--- a/source/nodejs/adaptivecards-visualizer/package.json
+++ b/source/nodejs/adaptivecards-visualizer/package.json
@@ -14,7 +14,7 @@
     "watch": "webpack --watch",
     "start": "http-server -c-1 -o",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "version": "npm run build && git add . && git commit -m 'bump version'",
+    "version": "npm run build && git add . && git commit -m \"bump version\"",
     "postversion": "git push"
   },
   "dependencies": {
